depends_compile_tests/tests/fail/derive/dependencies/fewer_than_2_fields.rs
use depends::derives::Dependencies;

#[derive(Dependencies)]
struct Foo {
    bar: usize,
}

#[derive(Dependencies)]
struct Bar {}

fn main() {}
